  preprocessed output. This leads to more potential cache hits when not using
  the direct mode.

- Added support for multiple `-arch` options to produce "fat binaries".

- Added support for caching compilation of assembler code produced by e.g.
  ``gcc -S file.c''.

- Added support for Fortran 77.


Bug fixes
~~~~~~~~~

- Fixed clang test suite when running on Linux.

- Fixed build and test for MinGW32 and Windows.


ccache 3.2.7
------------
Release date: 2016-07-20

Bug fixes
~~~~~~~~~

- Fixed a bug which could lead to false cache hits for compiler command lines
  with a missing argument to an option that takes an argument.

- ccache now knows how to work around a glitch in the output of GCC 6's
  preprocessor.


ccache 3.2.6
------------
Release date: 2016-07-12

Bug fixes
~~~~~~~~~

- Fixed build problem on QNX, which lacks ``SA_RESTART''.

- Bail out on compiler option `-fstack-usage` since it creates a `.su` file
  which ccache currently doesn't handle.

- Fixed a bug where (due to ccache rewriting paths) the compiler could choose
  incorrect include files if `CCACHE_BASEDIR` is used and the source file path
  is absolute and is a symlink.


ccache 3.2.5
------------
Release date: 2016-04-17


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Only pass clang-specific `-stdlib=` to the preprocessor.

- Improved handling of stale NFS handles.

- Made it harder to misinterpret documentation of boolean environment settings'
  semantics.


Bug fixes
~~~~~~~~~

- Include m4 files used by configure.ac in the source dist archives.

- Corrected "Performance" section in the manual regarding `__DATE_`, `__TIME__`
  and `__FILE__` macros.

- Fixed build on Solaris 10+ and AIX 7.

- Fixed failure to create directories on QNX.

- Don't (try to) update manifest file in ``read-only'' and ``read-only direct''
  modes.

- Fixed a bug in caching of `stat` system calls in ``file_stat_matches
  sloppiness mode''.
