@@ -46,6 +46,7 @@ static const struct compopt compopts[] = {
 	{"-MM",             TOO_HARD},
 	{"-MQ",             TAKES_ARG},
 	{"-MT",             TAKES_ARG},
+	{"-P",              TOO_HARD},
 	{"-U",              AFFECTS_CPP | TAKES_ARG | TAKES_CONCAT_ARG},
 	{"-V",              TAKES_ARG},
 	{"-Xassembler",     TAKES_ARG},
